FIX: footer contrast font fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,9 @@ footer {
     background-color: var(--secondary-color);
     padding-bottom: 1.2rem;
     text-align: center;
+    font-size: 18px;
+    font-weight: 800px;
+    font-family: var(--primary-font);
     bottom: 0;
     /* vertically align text closer to center */
     padding-top: 1rem;
